--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <!-- Social media -->
   <meta property="og:title" content="Générateur de signatures" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://adapei-meuse.github.io/AMIE55_Signatures/" />
-  <meta property="og:image" content="https://adapei-meuse.github.io/AMIE55_Signatures/img/signatures-social.png" />
+  <meta property="og:url" content="https://adapei-meuse.github.io/signatures/" />
+  <meta property="og:image" content="https://adapei-meuse.github.io/signatures/img/signatures-social.png" />
 
   <!-- Manifest -->
   <link rel="manifest" href="manifest.json">
@@ -102,6 +102,11 @@
               <div class="form-group">
                 <label for="domainInput">Domaine</label>
                 <select class="form-control" name="domainInput" id="domainInput">
+                  <option value="@adapei-meuse.fr">@adapei-meuse.fr</option>
+                  <option value="@mda55.fr">@mda55.fr</option>
+                  <option value="@ideas-lab.tech">@ideas-lab.tech</option>
+                  <option value="@catholique55.fr">@catholique55.fr</option>
+                  <option value="@caph-handicoeur.fr">@caph-handicoeur.fr</option>
                   <option value="@amie55.com">@amie55.com</option>
                   <!-- Vous pouvez ajouter plus d'options ici -->
                 </select>
@@ -155,7 +160,7 @@
                     <path fill-rule="evenodd"
                       d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                   </svg>
-                  <span id="organisationOutput">Siège</span>
+                  <span id="organisationOutput">ESAT de Cumières, Administration</span>
                 </li>
                 <li class="d-flex align-items-center">
                   <svg class="bi bi-at mr-2" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
@@ -164,7 +169,7 @@
                       d="M13.106 7.222c0-2.967-2.249-5.032-5.482-5.032-3.35 0-5.646 2.318-5.646 5.702 0 3.493 2.235 5.708 5.762 5.708.862 0 1.689-.123 2.304-.335v-.862c-.43.199-1.354.328-2.29.328-2.926 0-4.813-1.88-4.813-4.798 0-2.844 1.921-4.881 4.594-4.881 2.735 0 4.608 1.688 4.608 4.156 0 1.682-.554 2.769-1.416 2.769-.492 0-.772-.28-.772-.76V5.206H8.923v.834h-.11c-.266-.595-.881-.964-1.6-.964-1.4 0-2.378 1.162-2.378 2.823 0 1.737.957 2.906 2.379 2.906.8 0 1.415-.39 1.709-1.087h.11c.081.67.703 1.148 1.503 1.148 1.572 0 2.57-1.415 2.57-3.643zm-7.177.704c0-1.197.54-1.907 1.456-1.907.93 0 1.524.738 1.524 1.907S8.308 9.84 7.371 9.84c-.895 0-1.442-.725-1.442-1.914z" />
                   </svg>
                   <span id="emailOutput">j.riviere</span>
-                  <span id="domainOutput">@amie55.com</span>
+                  <span id="domainOutput">@adapei-meuse.fr</span>
                 </li>
                 <li class="d-flex align-items-center" id="liPhone">
                   <svg class="bi bi-briefcase mr-2" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
@@ -199,7 +204,7 @@
   <!-- Pied de page -->
   <footer class="container-parent py-1 bg-light mt-auto">
     <div class="container">
-      <b>Signatures v<span id="appRelease"></span></b> © 2025 ADAPEI de la Meuse - <a
+      <b>Signatures v<span id="appRelease"></span></b> © 2020 ADAPEI de la Meuse - <a
         href="https://github.com/adapei-meuse/signatures">GitHub</a>
     </div>
   </footer>
