--- a/index.html
+++ b/index.html
@@ -1,22 +1,150 @@
-<div class="signature-preview" id="signaturePreview">
-    <table style="border:none; border-collapse:collapse;">
-        <tr>
-            <td style="padding-right:15px; vertical-align:top;">
-                <img src="img/logos/amie55.jpg" alt="Logo" width="120">
-            </td>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<title>Générateur de signature AMIE55</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-            <td style="vertical-align:top;">
-                <div class="signature-name">
-                    <span id="outPrenom">Jean</span> <span id="outNom">Dupont</span>
-                </div>
-                <div id="outFonction">Chef de service</div>
-                <ul style="list-style:none; padding-left:0; margin:5px 0 0 0;">
-                    <li id="outService">Administration</li>
-                    <li>Email : <span id="outEmail">j.dupont</span><span id="outDomaine">@example.com</span></li>
-                    <li>Tél : <span id="outTel">01 23 45 67 89</span></li>
-                    <li>Mobile : <span id="outMobile">06 12 34 56 78</span></li>
-                </ul>
-            </td>
-        </tr>
-    </table>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        display: flex;
+        gap: 40px;
+    }
+    .form-container {
+        width: 45%;
+    }
+    .preview-container {
+        width: 45%;
+    }
+    input, select {
+        width: 100%;
+        padding: 8px;
+        margin: 5px 0 15px;
+        font-size: 14px;
+    }
+    .signature-preview {
+        border: 1px solid #ccc;
+        padding: 15px;
+        width: 100%;
+        background: #fff;
+    }
+    .signature-name {
+        font-size: 18px;
+        font-weight: bold;
+    }
+    ul {
+        list-style: none;
+        padding-left: 0;
+        margin: 5px 0 0 0;
+    }
+    li {
+        margin-bottom: 4px;
+    }
+    button {
+        padding: 10px 15px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+</style>
+</head>
+<body>
+
+<div class="form-container">
+    <h2>Informations</h2>
+
+    <label>Prénom</label>
+    <input type="text" id="inputPrenom" placeholder="Jean">
+
+    <label>Nom</label>
+    <input type="text" id="inputNom" placeholder="Dupont">
+
+    <label>Fonction</label>
+    <input type="text" id="inputFonction" placeholder="Chef de service">
+
+    <label>Service / Établissement</label>
+    <input type="text" id="inputService" placeholder="Administration">
+
+    <label>Email (sans @domaine)</label>
+    <input type="text" id="inputEmail" placeholder="j.dupont">
+
+    <label>Téléphone</label>
+    <input type="text" id="inputTel" placeholder="01 23 45 67 89">
+
+    <label>Mobile</label>
+    <input type="text" id="inputMobile" placeholder="06 12 34 56 78">
 </div>
+
+<div class="preview-container">
+    <h2>Aperçu de votre signature</h2>
+
+    <div class="signature-preview" id="signaturePreview">
+        <table style="border:none; border-collapse:collapse;">
+            <tr>
+                <td style="padding-right:15px; vertical-align:top;">
+                    img/logos/amie55.jpg
+                </td>
+
+                <td style="vertical-align:top;">
+                    <div class="signature-name">
+                        <span id="outPrenom">Jean</span> <span id="outNom">Dupont</span>
+                    </div>
+                    <div id="outFonction">Chef de service</div>
+                    <ul style="list-style:none; padding-left:0; margin:5px 0 0 0;">
+                        <li id="outService">Administration</li>
+                        <li>Email : <span id="outEmail">j.dupont</span><span id="outDomaine">@amie55.com</span></li>
+                        <li>Tél : <span id="outTel">01 23 45 67 89</span></li>
+                        <li>Mobile : <span id="outMobile">06 12 34 56 78</span></li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <br>
+    <button onclick="copySignature()">📋 Copier la signature HTML</button>
+</div>
+
+<script>
+// Charger manifest.json
+fetch("manifest.json")
+    .then(r => r.json())
+    .then(manifest => {
+        document.getElementById("outDomaine").textContent = manifest.domain;
+
+        // Mettre le logo dans la signature
+        img/logos/amie55.jpg
+    });
+
+// Liaison dynamique
+const bind = (inputId, outputId) => {
+    document.getElementById(inputId).addEventListener("input", e => {
+        document.getElementById(outputId).textContent = e.target.value;
+    });
+};
+
+bind("inputPrenom", "outPrenom");
+bind("inputNom", "outNom");
+bind("inputFonction", "outFonction");
+bind("inputService", "outService");
+bind("inputEmail", "outEmail");
+bind("inputTel", "outTel");
+bind("inputMobile", "outMobile");
+
+// Copier HTML de la signature
+function copySignature() {
+    const html = document.getElementById("signaturePreview").innerHTML;
+
+    const blob = new Blob([html], { type: "text/html" });
+    const item = new ClipboardItem({ "text/html": blob });
+
+    navigator.clipboard.write([item]).then(() => {
+        alert("Signature copiée !");
+    });
+}
+</script>
+
+</body>
+</html>
+``
