--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <table style="border:none; border-collapse:collapse;">
             <tr>
                 <td style="padding-right:15px; vertical-align:top;">
-                    img/logos/amie55.jpg
+                    assets/img/vague_amie55.jpg
                 </td>
 
                 <td style="vertical-align:top;">
