--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ fetch("manifest.json")
         document.getElementById("outDomaine").textContent = manifest.domain;
 
         // Mettre le logo dans la signature
-        assets/img/vague_amie55.jpg
+        assets/img/amie55.jpg
     });
 
 // Liaison dynamique
